--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -4,7 +4,18 @@
 <div class="navbar" id="navbar">
     <nav>
         <div class="nav-wrapper blue-grey lighten-4 ">
-            <span class="brand-logo left black-text">OpenBio.eu (beta) <small>version: {{version}} <a href="https://github.com/kantale/OpenBioC" target="_blank">source</a></small></span>
+            <div>
+            <a href="#!" class="brand-logo left">
+                <img class="responsive-img" style="max-height: 60px;" src="/static/app/images/konstantina/epanek_logo_transparent_x60.png">
+            </a>
+            <span class="brand-logo center black-text" style="top: -8px;">
+                OpenBio.eu <span style="font-size:24px;">(beta)</span>
+            </span>
+            <span class="brand-logo center black-text" style="font-size: 14px; top: 20px;">
+                Version: {{version}} 
+                <a href="https://github.com/kantale/OpenBioC" target="_blank">Source</a>
+            </span>
+        </div>
             <a id="navMenuBtn" href="#" data-target="mobile-nav" class="sidenav-trigger right black-text"><i class="material-icons">menu</i></a>
             <!-- Navbar Content -->
             <ul id="main-nav" class="right hide-on-med-and-down">
