--- a/OpenBioC/app/templates/app/index_static_gr.html
+++ b/OpenBioC/app/templates/app/index_static_gr.html
@@ -110,7 +110,8 @@ http://www.tooplate.com/view/2098-health
                                            
                                             <!-- <h2>Healthy Living</h2>-->
 											<br>
-                                            <a href="#about" class="section-btn btn btn-default smoothScroll">Αντικείμενο</a>
+											 <a href="../platform/" class="section-btn btn btn-default smoothScroll">Εκκίνηση Πλατφόρμας</a>
+                                            <!--<a href="#about" class="section-btn btn btn-default smoothScroll">Αντικείμενο</a>-->
                                         </div>
                                    </div>
                               </div>
