--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -17,14 +17,14 @@ http://www.tooplate.com/view/2098-health
      <meta name="author" content="Tooplate">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <link rel="stylesheet" href="/static/app/static/css/bootstrap.min.css">
-     <link rel="stylesheet" href="/static/app/static/css/font-awesome.min.css">
-     <link rel="stylesheet" href="/static/app/static/css/animate.css">
-     <link rel="stylesheet" href="/static/app/static/css/owl.carousel.css">
-     <link rel="stylesheet" href="/static/app/static/css/owl.theme.default.min.css">
+     <link rel="stylesheet" href="/static/static/static/css/bootstrap.min.css">
+     <link rel="stylesheet" href="/static/static/static/css/font-awesome.min.css">
+     <link rel="stylesheet" href="/static/static/static/css/animate.css">
+     <link rel="stylesheet" href="/static/static/static/css/owl.carousel.css">
+     <link rel="stylesheet" href="/static/static/static/css/owl.theme.default.min.css">
 
      <!-- MAIN CSS -->
-     <link rel="stylesheet" href="/static/app/static/css/tooplate-style.css">
+     <link rel="stylesheet" href="/static/static/static/css/tooplate-style.css">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
@@ -40,7 +40,7 @@ http://www.tooplate.com/view/2098-health
      <header>
           <div class="container">
                <div class="row">
-				<img src="/static/app/static/images/etpa.jpg" style="float: right;">
+				<img src="/static/static/static/images/etpa.jpg" style="float: right;">
 
 			   <!--
                     <div class="col-md-4 col-sm-5">
@@ -71,7 +71,7 @@ http://www.tooplate.com/view/2098-health
 
                     <!-- lOGO IMAGE HERE -->
                     <!--<a href="index.html" class="navbar-brand"><i class="fa fa-h-square"></i>ealth Center</a>-->
-					<a href="#"><img src="/static/app/static/images/logo.png" style="display: inline-block; margin-top: 0;"></a>
+					<a href="#"><img src="/static/static/static/images/logo.png" style="display: inline-block; margin-top: 0;"></a>
                </div>
 
                <!-- MENU LINKS -->
@@ -84,8 +84,8 @@ http://www.tooplate.com/view/2098-health
                          <li><a href="#news" class="smoothScroll">News</a></li>
                          <li><a href="#news" class="smoothScroll">Dissemination</a></li>
                          <li><a href="#mycontact" class="smoothScroll">Contact</a></li>
-						 <li><a href="/index_gr" class="smoothScroll">GR</a></li>
-						 <!--<li><a href="/static/app/static/gr/index.html" class="smoothScroll"><img src="/static/app/static/images/grflag.png" id="grflag" style=" max-width:10%;  max-height:10%;" /></a></li>
+						 <li><a href="/gr" class="smoothScroll">GR</a></li>
+						 <!--<li><a href="/static/static/static/gr/index.html" class="smoothScroll"><img src="/static/static/static/images/grflag.png" id="grflag" style=" max-width:10%;  max-height:10%;" /></a></li>
                          <!- <li class="appointment-btn"><a href="#appointment">Make an appointment</a></li>-->
                     </ul>
                </div>
@@ -180,7 +180,7 @@ http://www.tooplate.com/view/2098-health
                               </div>
 							  <!--
                               <figure class="profile wow fadeInUp" data-wow-delay="1s">
-                                   <img src="/static/app/static/images/author-image.jpg" class="img-responsive" alt="">
+                                   <img src="/static/static/static/images/author-image.jpg" class="img-responsive" alt="">
                                    <figcaption>
                                         <h3>Dr. Neil Jackson</h3>
                                         <p>General Principal</p>
@@ -288,13 +288,13 @@ http://www.tooplate.com/view/2098-health
 						</ul>
 						<div class="tab-content" id="myTabContent">
 						  <div class="tab-pane fade active in" id="forth" role="tabpanel" aria-labelledby="forth-tab"><br/>
-						  <img src="/static/app/static/images/forth.png" alt="forth ics"><br/><br/>
+						  <img src="/static/static/static/images/forth.png" alt="forth ics"><br/><br/>
 						  <p style="text-align: justify;"><span style="color: #757575; text-align: justify;">FORTH-ICS (PI: George Potamias, Principal Researcher, users.ics.forth.gr/~potamias/GeorgePotamias.htm) participates in the OpenBio-C project with the Laboratory of Computational Biomedicine (CBML, www.ics.forth.gr/cbml). CBML research activities related to the OpenBio-C project include: semantic indexing and integration of heterogeneous clinical genomic data; development of methodologies and techniques for large-scale genomic analysis (GWAS studies, management and processing of NGS data analysis with advanced workflows / pipelines; development of innovative IT technologies in the context of personalized / genomic / precision medicine; development of methodologies, tools and systems for the discovery of knowledge from heterogeneous biomedical data (including biomedical literature mining) with the development of advanced natural language processing (NLP) techniques. CBML has actively participated and participates in a large number of National/Greek and European projects. CBML members have published several papers related to the OpenBio-C objectives and targets.</span></p>
 						  </div>
 						  <div class="tab-pane fade" id="moumouris" role="tabpanel" aria-labelledby="moumouris-tab"><br/><p style="text-align: justify;"><span style="color: #757575;"> The company has been operating since 1999; its main activities concern the design, management and installation of PC networks for large customers. It has participated either directly or as a subcontractor in several large IT projects in the field of health. Work carried out focuses on the integrated provision of IT management solutions through Virtual Cloud Infrastructure and the provision of Voice over IP solutions. The company manages a series of third-party networks and IT infrastructures adhering to international standards. Annually, it takes care of the smooth operation of approximately 4000 workstations, 237 Servers, 9476 network ports and 749 Wi-Fi Access Points. The company has collaborated with public sector bodies such as the Region of Crete (Department of Physical Education), the Institute of Informatics at FORTH, the hospitals of Crete, the Asklepios Diagnostic Center, and the Chronic Diseases Hospitals of Lassithi and Chania. In addition, the company operates in the Hospitality sector, offering VoIP Unified Communication &amp; Centralized Wi-fi solutions. It builds on open software solutions to reduce the cost of managing client infrastructures while also delivering more efficient CaPex and OpEx combinations. As a subcontractor of the Orco Unisystems Group, the company also participates in the management of the Oracle Clusters that support the integrated information system of the 7th Health District of Crete. Also committed to carry out research work, the company has participated in the project &#8220;Development of research infrastructure of clinical computer tools and services for the best diagnosis and assessment of the optimal personalized treatment of oncological diseases&#8221; of the Cross Border Cooperation Program &#8220;Greece-Cyprus 2007-2013&#8221;.</span></p>
 						  </div>
 						  <div class="tab-pane fade" id="unip" role="tabpanel" aria-labelledby="unip-tab"><br/>
-						  <img src="/static/app/static/images/unip.png" alt="unip"><br/><br/>
+						  <img src="/static/static/static/images/unip.png" alt="unip"><br/><br/>
 						  <p style="text-align: justify;"><span style="color: #757575;">The University of Patras (UPAT) is the third largest University in Greece regarding the size of students’ potential, the faculty members, administrative personnel, number of departments, and accredited students titles. It includes 24 Departments, with a large number of sectors and consequently a great range of disciplines. Participation of UPAT in the OpenBio-C project is through the Industrial Management &amp; Information Systems (IMIS) Lab of the Mechanical Engineering &amp; Aeronautics Department (PI: Prof. N. Karacapilidis). IMIS Lab members have a large experience in designing and implementing innovative software to enhance collaboration and support knowledge management and collective decision making processes in various types of communities and organizations. This experience is documented through the strong involvement of the Lab’s members in competitive R&amp;D projects funded by the EC in the context of FP6 and FP7 programs (e.g. DICODE and PALETTE). IMIS Lab members have participated in all major European and National R&amp;D programs, as well as in several international collaborative programs; through such actions, they have also gained substantial experience in handling diverse Big Data management issues and in achieving interoperability with external information systems and web services. The solutions developed build on the synergy of human and machine reasoning and provide alternative forms of visual representation of the relevant information. In addition, IMIS Lab members have the necessary scientific skills to analyze the practices and problems that characterize modern collaborative environments, both technologically and organisationally. Finally, they possess the necessary cutting-edge know-how to develop semantic and technology integration software.</span></p></div>
 						</div>
 					
@@ -323,7 +323,7 @@ http://www.tooplate.com/view/2098-health
                          <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s">
 						 <!--
                               <a href="news-detail.html">
-                                   <img src="/static/app/static/images/news-image1.jpg" class="img-responsive" alt="">
+                                   <img src="/static/static/static/images/news-image1.jpg" class="img-responsive" alt="">
                               </a>
 						 -->
                               <div class="news-info">
@@ -332,7 +332,7 @@ http://www.tooplate.com/view/2098-health
                                    <a href="https://goo.gl/forms/dziu7R9bVQ6DzoKi1 " target="_blank"><p>https://goo.gl/forms/dziu7R9bVQ6DzoKi1 </p></a>
 								   <br>
                                    <div class="author">
-                                        <!--<img src="/static/app/static/images/author-image.jpg" class="img-responsive" alt="">-->
+                                        <!--<img src="/static/static/static/images/author-image.jpg" class="img-responsive" alt="">-->
                                         <div class="author-info">
                                              <h5>Nikos Kanakaris</h5>
                                              <!--<p>CEO / Founder</p>-->
@@ -347,7 +347,7 @@ http://www.tooplate.com/view/2098-health
                          <div class="news-thumb wow fadeInUp" data-wow-delay="0.6s">
 						 <!--
                               <a href="news-detail.html">
-                                   <img src="/static/app/static/images/news-image2.jpg" class="img-responsive" alt="">
+                                   <img src="/static/static/static/images/news-image2.jpg" class="img-responsive" alt="">
                               </a>
 						 -->
                               <div class="news-info">
@@ -355,7 +355,7 @@ http://www.tooplate.com/view/2098-health
                                    <h3><a href="https://bibe2019.ics.forth.gr/" target="_blank">BIBE 2019 Conference</a></h3>
                                    <p>19th annual IEEE International Conference on Bioinformatics and Bioengineering .</p>
                                    <div class="author">
-                                        <!--<img src="/static/app/static/images/author-image.jpg" class="img-responsive" alt="">-->
+                                        <!--<img src="/static/static/static/images/author-image.jpg" class="img-responsive" alt="">-->
                                         <div class="author-info">
                                              <h5>OpenBio-C</h5>
                                              <!--<p>General Director</p>-->
@@ -372,14 +372,14 @@ http://www.tooplate.com/view/2098-health
                          <div class="news-thumb wow fadeInUp" data-wow-delay="0.8s">
 
                               <a href="news-detail.html">
-                                   <img src="/static/app/static/images/news-image3.jpg" class="img-responsive" alt="">
+                                   <img src="/static/static/static/images/news-image3.jpg" class="img-responsive" alt="">
                               </a>
                               <div class="news-info">
                                    <span>January 19, 2018</span>
                                    <h3><a href="news-detail.html">Review Annual Medical Research</a></h3>
                                    <p>Vivamus non nulla semper diam cursus maximus. Pellentesque dignissim.</p>
                                    <div class="author">
-                                        <img src="/static/app/static/images/author-image.jpg" class="img-responsive" alt="">
+                                        <img src="/static/static/static/images/author-image.jpg" class="img-responsive" alt="">
                                         <div class="author-info">
                                              <h5>Andrio Abero</h5>
                                              <p>Online Advertising</p>
@@ -450,7 +450,7 @@ http://www.tooplate.com/view/2098-health
                               <h4 class="wow fadeInUp" data-wow-delay="0.4s">Latest News</h4>
                               <div class="latest-stories">
                                    <div class="stories-image">
-                                        <a href="#"><img src="/static/app/static/images/news-image.jpg" class="img-responsive" alt=""></a>
+                                        <a href="#"><img src="/static/static/static/images/news-image.jpg" class="img-responsive" alt=""></a>
                                    </div>
                                    <div class="stories-info">
                                         <a href="#"><h5>Amazing Technology</h5></a>
@@ -460,7 +460,7 @@ http://www.tooplate.com/view/2098-health
 
                               <div class="latest-stories">
                                    <div class="stories-image">
-                                        <a href="#"><img src="/static/app/static/images/news-image.jpg" class="img-responsive" alt=""></a>
+                                        <a href="#"><img src="/static/static/static/images/news-image.jpg" class="img-responsive" alt=""></a>
                                    </div>
                                    <div class="stories-info">
                                         <a href="#"><h5>New Healing Process</h5></a>
@@ -504,14 +504,14 @@ http://www.tooplate.com/view/2098-health
      </footer>
 
      <!-- SCRIPTS -->
-     <script src="/static/app/static/js/jquery.js"></script>
-     <script src="/static/app/static/js/bootstrap.min.js"></script>
-     <script src="/static/app/static/js/jquery.sticky.js"></script>
-     <script src="/static/app/static/js/jquery.stellar.min.js"></script>
-     <script src="/static/app/static/js/wow.min.js"></script>
-     <script src="/static/app/static/js/smoothscroll.js"></script>
-     <script src="/static/app/static/js/owl.carousel.min.js"></script>
-     <script src="/static/app/static/js/custom.js"></script>
+     <script src="/static/static/static/js/jquery.js"></script>
+     <script src="/static/static/static/js/bootstrap.min.js"></script>
+     <script src="/static/static/static/js/jquery.sticky.js"></script>
+     <script src="/static/static/static/js/jquery.stellar.min.js"></script>
+     <script src="/static/static/static/js/wow.min.js"></script>
+     <script src="/static/static/static/js/smoothscroll.js"></script>
+     <script src="/static/static/static/js/owl.carousel.min.js"></script>
+     <script src="/static/static/static/js/custom.js"></script>
 
 </body>
 </html>
