--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -40,7 +40,8 @@ http://www.tooplate.com/view/2098-health
      <header>
           <div class="container">
                <div class="row">
-				<img src="/static/static/static/images/etpa.jpg" style="float: right;">
+				<img src="/static/static/static/images/etpa_en_small.jpg" style="float: right;">
+				<!--<img src="/static/static/static/images/etpa.jpg" style="float: right;">-->
 
 			   <!--
                     <div class="col-md-4 col-sm-5">
