--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -27,8 +27,8 @@
                         <div class="card">
                             <div class="card-content">
                                 <div class="row right">
-                                    <a class="waves-effect waves-teal btn-flat">Cancel</a>
-                                    <a class="waves-effect waves-teal btn-flat">Update</a>
+                                    <a class="waves-effect waves-teal btn-flat" ng-click="profile_cancel_clicked()">Cancel</a>
+                                    <a class="waves-effect waves-teal btn-flat" ng-click="profile_update_clicked()">Update</a>
                                 </div>
                                 <blockquote><span class="card-title">Profile</span></blockquote>
                                 <div class="row">
