OpenBio.eu in navbar is link to static #96

--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -10,7 +10,7 @@
                     <img style="height: 60px;" src="/static/app/images/konstantina/epanek_logo_transparent_x60.png">
                 </a>
                 <span class="brand-logo center black-text" style="top: -8px;">
-                    OpenBio.eu <span style="font-size:24px;">(beta)</span>
+                    <a href="/" style="color:black;">OpenBio.eu</a> <span style="font-size:24px;">(beta)</span>
                 </span>
                 <span class="brand-logo center black-text" style="font-size: 14px; top: 20px;">
                     Version: {{version}} 
