add twitter feed in static site

--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -400,6 +400,8 @@ http://www.tooplate.com/view/2098-health
      <section id="mycontact" data-stellar-background-ratio="3">
           <div class="container">
                <div class="row">
+			   
+			   		   
 
                     <div class="col-md-6 col-sm-6">
                          <!-- CONTACT FORM HERE -->
@@ -431,6 +433,17 @@ http://www.tooplate.com/view/2098-health
                               </div>
 							  
                         </form>
+                    </div>
+					
+					 <div class="col-md-6 col-sm-6"> 
+                         
+                              <div class="section-title wow fadeInUp"">
+                                   <h2 class="wow fadeInUp" data-wow-delay="0.4s">Follow Us</h2>
+                              </div> 
+
+							  
+							 <a class="twitter-timeline" href="https://twitter.com/OpenbioE?ref_src=twsrc%5Etfw" data-chrome="noheader nofooter noborders"> Tweets by OpenbioE</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                         
                     </div>
 					
 
@@ -471,19 +484,7 @@ http://www.tooplate.com/view/2098-health
                          </div>
                     </div>
 			-->
-                    <div class="col-md-6 col-sm-6"> 
-                         <div class="footer-thumb">
-                              <div class="opening-hours">
-                                   <h4 class="wow fadeInUp" data-wow-delay="0.4s">Follow Us</h4>
-                              </div> 
-
-                              <ul class="social-icon">
-                                  
-                                   <li><a href="https://twitter.com/OpenbioE" target="_blank" class="fa fa-twitter"></a></li>
-                        
-                              </ul>
-                         </div>
-                    </div>
+                   
 
                     <div class="col-md-12 col-sm-12 border-top">
                          <div class="col-md-4 col-sm-6">
