--- a/OpenBioC/static/templates/static/index_static_gr.html
+++ b/OpenBioC/static/templates/static/index_static_gr.html
@@ -473,9 +473,14 @@ http://www.tooplate.com/view/2098-health
                         </form>
                     </div>
 					
-
-
-               </div>
+					 <div class="col-md-6 col-sm-6"> 
+                         
+                              <div class="section-title wow fadeInUp"">
+                                   <h2 class="wow fadeInUp" data-wow-delay="0.4s">Follow Us</h2>
+                              </div> 
+							  
+							 <a class="twitter-timeline" href="https://twitter.com/OpenbioE?ref_src=twsrc%5Etfw" data-chrome="noheader nofooter noborders"> Tweets by OpenbioE</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					</div>
           </div>
      </section>
 
@@ -510,7 +515,7 @@ http://www.tooplate.com/view/2098-health
                               </div>
                          </div>
                     </div>
-					-->
+					
                     <div class="col-md-6 col-sm-6"> 
                          <div class="footer-thumb">
                               <div class="opening-hours">
@@ -524,6 +529,7 @@ http://www.tooplate.com/view/2098-health
                               </ul>
                          </div>
                     </div>
+					-->
 
                     <div class="col-md-12 col-sm-12 border-top">
                          <div class="col-md-4 col-sm-6">
