change greek title in twitter feed section in static site

--- a/OpenBioC/static/templates/static/index_static_gr.html
+++ b/OpenBioC/static/templates/static/index_static_gr.html
@@ -476,7 +476,7 @@ http://www.tooplate.com/view/2098-health
 					 <div class="col-md-6 col-sm-6"> 
                          
                               <div class="section-title wow fadeInUp"">
-                                   <h2 class="wow fadeInUp" data-wow-delay="0.4s">Follow Us</h2>
+                                   <h2 class="wow fadeInUp" data-wow-delay="0.4s">Ακολουθήστε μας</h2>
                               </div> 
 							  
 							 <a class="twitter-timeline" href="https://twitter.com/OpenbioE?ref_src=twsrc%5Etfw" data-chrome="noheader nofooter noborders"> Tweets by OpenbioE</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
