--- a/OpenBioC/static/templates/static/index_static_gr.html
+++ b/OpenBioC/static/templates/static/index_static_gr.html
@@ -106,7 +106,7 @@ http://www.tooplate.com/view/2098-health
                               <div class="item item-first">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-										<h3>Ενα διαδικτυακο περιβαλλον συνεργατικης, ανοικτης και ημεσα αναπαραγωγιμης επιστημης.</h3>
+										<h3>Ενα διαδικτυακο περιβαλλον συνεργατικης, ανοικτης και αμεσα αναπαραγωγιμης επιστημης.</h3>
                                            
                                             <!-- <h2>Healthy Living</h2>-->
 											<br>
@@ -466,7 +466,7 @@ http://www.tooplate.com/view/2098-health
                                         <input type="tel" class="form-control" id="phone" name="phone" placeholder="Θέμα">
                                         <label for="Message">Μήνυμα</label>
                                         <textarea class="form-control" rows="5" id="message" name="message" placeholder="Μήνυμα"></textarea>
-                                        <button type="submit" class="form-control" id="cf-submit" name="submit">Αποστολή</button>
+										<button type="submit" class="form-control" id="cf-submit" name="submit" style="color:#48BCCB";>Αποστολή</button>
                                    </div>
                               </div>
 							  
