remove font awesome from index.html. not used.

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -62,7 +62,9 @@
 	-->
 
 	<!-- For Glyphicons -->
+	<!-- NOT USED
 	<link rel="stylesheet" href="/static/app/fontawesome/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" />
+	-->
 
 	<!-- This is version 1.7.2 -->
 	<script src="/static/app/angular.min.js"></script>
