--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -396,16 +396,15 @@ http://www.tooplate.com/view/2098-health
      </section>
 
 
-     <!-- MAKE AN APPOINTMENT -->
+     <!-- CONTACT FORM -->
      <section id="mycontact" data-stellar-background-ratio="3">
           <div class="container">
                <div class="row">
 			   
-			   		   
-
                     <div class="col-md-6 col-sm-6">
                          <!-- CONTACT FORM HERE -->
-                         <form id="appointment-form" role="form" method="post" action="mailto:giatrakister@gmail.com" nctype="text/plain">
+                         <form id="contact-form" role="form" method="post" action="/" nctype="text/plain">
+                              {% csrf_token %}
 
                               <!-- SECTION TITLE -->
                               <div class="section-title wow fadeInUp" data-wow-delay="0.4s">
@@ -414,21 +413,26 @@ http://www.tooplate.com/view/2098-health
 
                               <div class="wow fadeInUp" data-wow-delay="0.8s">
                                    <div class="col-md-6 col-sm-6">
-                                        <label for="name">Name</label>
-                                        <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
+                                        <label for="{{ contact_form.name.id_for_label }}">Name</label>
+                                        <!-- <input type="text" class="form-control" id="name" name="name" placeholder="Full Name"> -->
+                                        {{ contact_form.name }}
                                    </div>
 
                                    <div class="col-md-6 col-sm-6">
-                                        <label for="email">Email</label>
-                                        <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
+                                        <label for="{{ contact_form.sender.id_for_label }}">Email</label>
+                                        <!-- <input type="email" class="form-control" id="email" name="email" placeholder="Your Email"> -->
+                                        {{ contact_form.sender }}
                                    </div>
 
                                    <div class="col-md-12 col-sm-12">
-                                        <label for="telephone">Subject</label>
-                                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Subject">
-                                        <label for="Message">Message</label>
-                                        <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"></textarea>
-                                        <button type="submit" class="form-control" id="cf-submit" name="submit" style="color:#48BCCB";>Submit</button>
+                                        <label for="{{ contact_form.subject.id_for_label }}">Subject</label>
+                                        <!-- <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject"> -->
+                                        {{ contact_form.subject }}
+                                        <label for="{{ contact_form.message.id_for_label }}">Message</label>
+                                        <!-- <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"></textarea> -->
+                                        {{ contact_form.message }}
+                                        <!-- <button type="submit" class="form-control" id="cf-submit" name="submit" style="color:#48BCCB";>Submit</button> -->
+                                        <input type="submit" class="form-control" id="cf-submit" name="submit" value="Submit" style="color:#48BCCB">
                                    </div>
                               </div>
 							  
