--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -98,6 +98,20 @@ http://www.tooplate.com/view/2098-health
      <!-- HOME -->
      <section id="home" class="slider" data-stellar-background-ratio="0.5">
           <div class="container">
+               {% if error_message %}
+               <div class="row">
+                    <div class="col-md-12">
+                         <strong style="color:red;">{{ error_message }}</strong>
+                    </div>
+               </div>
+               {% endif %}
+               {% if success_message %}
+               <div class="row">
+                    <div class="col-md-12">
+                         <strong>{{ success_message }}</strong>
+                    </div>
+               </div>
+               {% endif %}
                <div class="row">
 						
                          <div class="owl-carousel owl-theme">
@@ -413,21 +427,25 @@ http://www.tooplate.com/view/2098-health
 
                               <div class="wow fadeInUp" data-wow-delay="0.8s">
                                    <div class="col-md-6 col-sm-6">
+                                        {{ contact_form.name.errors }}
                                         <label for="{{ contact_form.name.id_for_label }}">Name</label>
                                         <!-- <input type="text" class="form-control" id="name" name="name" placeholder="Full Name"> -->
                                         {{ contact_form.name }}
                                    </div>
 
                                    <div class="col-md-6 col-sm-6">
+                                        {{ contact_form.sender.errors }}
                                         <label for="{{ contact_form.sender.id_for_label }}">Email</label>
                                         <!-- <input type="email" class="form-control" id="email" name="email" placeholder="Your Email"> -->
                                         {{ contact_form.sender }}
                                    </div>
 
                                    <div class="col-md-12 col-sm-12">
+                                        {{ contact_form.subject.errors }}
                                         <label for="{{ contact_form.subject.id_for_label }}">Subject</label>
                                         <!-- <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject"> -->
                                         {{ contact_form.subject }}
+                                        {{ contact_form.message.errors }}
                                         <label for="{{ contact_form.message.id_for_label }}">Message</label>
                                         <!-- <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"></textarea> -->
                                         {{ contact_form.message }}
