small corr on html comment

--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -382,7 +382,7 @@ http://www.tooplate.com/view/2098-health
 
 					<!--
                     <div class="col-md-4 col-sm-6">
-                         <!-- NEWS THUMB -->
+                         -- NEWS THUMB -->
 						 <!--
                          <div class="news-thumb wow fadeInUp" data-wow-delay="0.8s">
 
