hide dead links to terms and Data Use Policy #98

--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -143,6 +143,7 @@
                 </div>
                 <div class="row col s12"> 
                     <button class="btn waves-effect waves-light" ng-click="signup_signup_pressed()">Sign up</button> <!-- modal-close --> 
+                    <div ng-show="false">
                     <p>
                         <small class="form-text text-muted">
                             By clicking Sign Up, you agree to our <a href="#">Terms</a>
@@ -150,6 +151,7 @@
                             have read our <a href="#">Data Use Policy</a>, including our <a href="#">Cookie Use</a>
                         </small>
                     </p>
+                    </div>
                     <p class="center-align">Already a member? <a href="#" id="modalSignInBtn">Sign in</a></p>
                 </div>
             </form>
