--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -103,16 +103,16 @@
                         in</button> <!-- modal-close-->
                     <p>
                         <small class="form-text text-muted">
-                            <a href="#">Forgot Password?</a>
+                            <a ng-click="signup_forgot_password_clicked()">Forgot Password?</a>
                         </small>
                     </p>
                     <div class="row" ng-show="signup_forgot_password_show">
                         <div class="input-field col s6">
                             <label for="forgotPasswordEmail">Please enter your email</label>
-                            <input id="forgotPasswordEmail" type="email" class="validate">
+                            <input id="forgotPasswordEmail" type="email" class="validate" ng-model="reset_password_email">
                         </div>
                         <div class="col s6">
-                            <button class="btn waves-effect waves-light">Send account information</button>
+                            <button class="btn waves-effect waves-light" ng-click="login_password_reset_email_send_pressed()">Send account information</button>
                         </div>
                     </div>
                     <p class="center-align">New user? <a href="#" id="modalSignUpBtn">Sign up</a></p>
